# coapi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  coapy.hpp  example.cpp  frame_detail.hpp  main.cpp
coapi/: coap_codes.hpp  coapi.hpp  frame_detail.hpp
test/: CMakeLists.txt  online_test.cpp  subtests.hpp  test.cpp
